--- a/App/templates/sign-in.html
+++ b/App/templates/sign-in.html
@@ -89,7 +89,8 @@
           <button class="form-btn mx-4" type="submit">Log in</button>
           <!-- <a href="index.html" class="form-btn" type="submit">Log in</a> -->
           <span class="has-separator">Or</span>
-          <a class="facebook-login" href="{% provider_login_url 'google' %}">
+          {% comment %} <a class="facebook-login" href="{% provider_login_url 'google' %}"> {% endcomment %}
+          <a class="facebook-login" href="#">
             <i class="fab fa-google"></i> Log in with Google
           </a>
           <a class="password-reset" href="#">Forgot password?</a>
