--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -163,7 +163,7 @@
 
                 <div class="posts">
                     {% if post_items|length == 0 %}
-                        <p class='text-center fs-5'>Follow more friends to view posts</p>
+                        <p class='text-center fs-5 mt-2'>Follow more friends to view posts</p>
                     {% endif %}
                     {% for post in post_items %}
                     <article class="post">
