--- a/App/static/assets/style.css
+++ b/App/static/assets/style.css
@@ -1262,13 +1262,70 @@ img {
 
 .profile-image {
     float: left;
-    width: calc(33.333% - 1rem);
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 3rem;
+	max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    position: relative;
 }
-
+@media screen and (min-width: 320px) {
+	.profile-image {
+		max-width: 130px;
+		max-height: 130px;
+		overflow: hidden;
+		border-radius: 50%;
+	}
+	.container {
+		padding: 0 12px;
+	}
+}
+@media screen and (min-width: 375px) {
+	.profile-image {
+		max-width: 180px;
+		max-height: 180px;
+		overflow: hidden;
+		border-radius: 50%;
+	}
+	.container {
+		padding: 0 16px;
+	}
+}
+@media screen and (min-width: 425px) {
+	.profile-image {
+		max-width: 200px;
+		max-height: 200px;
+		overflow: hidden;
+		border-radius: 50%;
+	}
+	.container {
+		padding: 0 20px;
+	}
+}
+@media screen and (min-width: 768px) {
+	.profile-image {
+		max-width: 250px;
+		max-height: 250px;
+		overflow: hidden;
+		border-radius: 50%;
+	}
+	.container {
+		padding: 0 28px;
+	}
+}
+@media screen and (min-width: 1024px) {
+	.profile-image {
+		max-width: 350px;
+		max-height: 350px;
+		overflow: hidden;
+		border-radius: 50%;
+	}
+	.container {
+		padding: 0 2rem;
+	}
+}
 .profile-image img {
     border-radius: 50%;
 }
@@ -1423,7 +1480,7 @@ img {
     .profile::after {
         display: none;
     }
-
+	
     .profile-image,
     .profile-user-settings,
     .profile-bio,
@@ -1433,7 +1490,7 @@ img {
     }
 
     .profile-image img {
-        width: 15rem;
+        width: 100%;
     }
 
     .profile-user-settings {
